--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "express": "^4.18.2",
     "npm-git-install": "^0.3.0",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "postgres": "^3.3.3"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.8.2",
+    "@parcel/transformer-sass": "^2.8.3",
     "nodemon": "^2.0.20",
-    "parcel": "^2.8.2"
+    "parcel": "^2.8.3"
   },
   "description": ""
 }
